--- a/style.css
+++ b/style.css
@@ -35,11 +35,14 @@ body {
 }
 
 .formulario {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   color: var(--color-fontcolor);
   width: 80%;
+  max-width: 40rem;
+  min-width: 20rem;
   height: 60%;
-  box-shadow: -4px 3px 2px black;
+  min-height: 25rem;
+  box-shadow: -4px 3px 2px rgba(0, 0, 0, 0.356);
   border-radius: .3rem;
 }
 
@@ -58,9 +61,6 @@ body {
 .title {
   font-size: clamp(1rem, 5vw, 3.5rem);
   text-align: center;
-  
-  
-  
 }
 
 .label, .input {
@@ -80,6 +80,9 @@ body {
 
 .input:hover, .input:focus, .input:checked {
   outline: none;
+  border-bottom: 2px solid #3a68b7;
+  padding: 0 .5rem;
+  transition: padding .02s;
 }
 
 .btn-div {
@@ -103,7 +106,6 @@ body {
 }
 
 .div-link {
-  
   width: 50%;
   display: flex;
   justify-content: center;
