--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@
   --background-color-btn: #3a68b7da;
   --color-btn: white;
   --color-fontcolor: #3a68b7;
-  --font-size-title: clamp(1rem, 5vw, 3.5rem);
-  --font-size-default: clamp(0.6rem, 3vw, 3rem);
-  --font-size-link: clamp(0.6rem, 2vw, 2.5rem);
+  --font-size-title: clamp(1rem, 5vw, 3rem);
+  --font-size-default: clamp(0.6rem, 3vw, 2.2rem);
+  --font-size-link: clamp(0.8rem, 2vw, 1.2rem);
   --font-size-input: clamp(0.3rem, 2vw, 1.5rem);
+  --text-shadow-fontshadow: 0px 1px 1px rgba(0, 0, 0, 0.404);
 }
 
 body {
@@ -39,11 +40,12 @@ body {
   color: var(--color-fontcolor);
   width: 80%;
   max-width: 40rem;
-  min-width: 20rem;
+  min-width: 30rem;
   height: 60%;
-  min-height: 25rem;
-  box-shadow: -4px 3px 2px rgba(0, 0, 0, 0.356);
+  min-height: 32rem;
+  box-shadow: -4px 4px 2px rgba(0, 0, 0, 0.356);
   border-radius: .3rem;
+  /* background-image: linear-gradient(to left, rgba(143, 17, 201, 0.164) 1%, white); */
 }
 
 .fieldset {
@@ -60,7 +62,9 @@ body {
 
 .title {
   font-size: clamp(1rem, 5vw, 3.5rem);
-  text-align: center;
+  /* text-align: center; */
+  letter-spacing: .1rem;
+  text-shadow: var(--text-shadow-fontshadow);
 }
 
 .label, .input {
@@ -68,6 +72,11 @@ body {
   font-size: var(--font-size-default);
   font-weight: 300;
   text-transform: uppercase;
+  
+}
+
+.label {
+  text-shadow: var(--text-shadow-fontshadow);
 }
 
 .input {
@@ -103,6 +112,7 @@ body {
   width: clamp(10rem, 40%, 15rem);
   height: clamp(3rem, 20%, 15rem);
   border-radius: .5rem;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.438);
 }
 
 .div-link {
